<resources>
    <string name="app_name">IoasysCamp</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, contetur adipiscing elit. Nunc accumsan.</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="join">entrar</string>
    <string name="welcome">BEM-VINDO AO \n EMPRESA</string>
    <string name="companies">Empresas</string>
    <string name="brazil">Brasil</string>
    <string name="enterprise_type">Negócio</string>
    <string name="search">Search</string>
    <string name="search_company">Buscar empresa</string>
    <string name="desc_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="london">London</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fill_to_search">Preencha o campo para pesquisar</string>
    <string name="no_data">Nada encontrado</string>
</resources>