<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginBottom="12dp"
    tools:showIn="@layout/activity_main">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/company_cover_image"
        android:layout_width="105dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/greeny_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/company_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="10dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/charcoal_grey"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/company_type_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/company_cover_image"
        app:layout_constraintTop_toTopOf="@+id/company_cover_image"
        tools:text="@string/companies" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/company_type_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/warm_grey"
        android:textSize="17sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/company_country_text"
        app:layout_constraintEnd_toEndOf="@id/company_name_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/company_name_text"
        app:layout_constraintTop_toBottomOf="@+id/company_name_text"
        tools:text="@string/enterprise_type" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/company_country_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/warm_grey"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/company_cover_image"
        app:layout_constraintEnd_toEndOf="@+id/company_type_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/company_type_text"
        app:layout_constraintTop_toBottomOf="@+id/company_type_text"
        tools:text="@string/brazil" />


</androidx.constraintlayout.widget.ConstraintLayout>