<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/details_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/medium_pink"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/detail_company_image"
                android:layout_width="0dp"
                android:layout_height="155dp"
                android:layout_margin="24dp"
                android:background="@color/greeny_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/detail_company_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/app_name"
                android:textColor="@color/charcoal_grey"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/detail_company_image"
                app:layout_constraintStart_toStartOf="@id/detail_company_image"
                app:layout_constraintTop_toBottomOf="@id/detail_company_image" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/detail_company_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/charcoal_grey"
                app:layout_constraintStart_toStartOf="@id/detail_company_title"
                app:layout_constraintTop_toBottomOf="@id/detail_company_title"
                app:srcCompat="@drawable/ic_location" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/detail_company_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/london"
                android:textColor="@color/charcoal_grey"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/detail_company_icon"
                app:layout_constraintStart_toEndOf="@+id/detail_company_icon" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/detail_company_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:text="@string/desc_lorem_ipsum"
                android:textColor="@color/warm_grey"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/detail_company_title"
                app:layout_constraintStart_toStartOf="@id/detail_company_title"
                app:layout_constraintTop_toBottomOf="@id/detail_company_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>